--- a/Day3_task.html
+++ b/Day3_task.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>SignUp Form</title>
+        <title>Day3_task</title>
     </head>
     <body>
         <form>
